# tiramisu-v2

./: CMakeLists.txt
imgui/: imgui_impl_sdl3.c  imgui_impl_sdl3.h
include/: camera.h  common.h  entity.h  global.h  iterate.h  map.h  player.h  render.h  shader.glsl.h  sokol-sdl-graphics-backend.h  update.h
res/: example_map.json  example_map.tmj  example_map.tmx  map.json  map.tmx
sokol/: sokol.c
src/: camera.c  common.c  entity.c  global.c  iterate.c  main.c  map.c  player.c  render.c  shader.glsl  sokol-sdl-graphics-backend-d3d.c  sokol-sdl-graphics-backend-gl.c  update.c
